--- a/tasks/linux.yml
+++ b/tasks/linux.yml
@@ -1,18 +1,23 @@
 - name: Install packages (Debian/Ubuntu)
   when: ansible_os_family == "Debian"
+  become: true
   apt:
     update_cache: yes
-    name: >
+    name: [
       build-essential, clang, cmake3, git, python-dev, zlib1g-dev,
       libssl-dev, libx11-dev, libgl1-mesa-dev, libxrandr-dev,
       libxxf86dga-dev, libxcursor-dev, bison, flex, libfreetype6-dev,
-      libvorbis-dev, libjpeg-dev, libopenal-dev, libode-dev
+      libvorbis-dev, libjpeg-dev, libopenal-dev, libode-dev,
+    ]
 
 - name: Install packages (Fedora)
   when: ansible_distribution == "Fedora"
+  become: true
   dnf:
-    name: >
+    update_cache: yes
+    name: [
       make, gcc, gcc-c++, clang, cmake, git, python-devel, zlib-devel,
       openssl-devel, libX11-devel, mesa-libGL-devel, libXrandr-devel,
       libXxf86dga-devel, libXcursor-devel, bison, flex, freetype-devel,
-      libvorbis-devel, libjpeg-turbo-devel, openal-soft-devel, ode-devel
+      libvorbis-devel, libjpeg-turbo-devel, openal-soft-devel, ode-devel,
+    ]
