--- a/tasks/linux.yml
+++ b/tasks/linux.yml
@@ -4,10 +4,15 @@
   apt:
     update_cache: yes
     name: [
-      build-essential, clang, cmake3, git, python-dev, zlib1g-dev,
-      libssl-dev, libx11-dev, libgl1-mesa-dev, libxrandr-dev,
+      build-essential, clang, cmake3, git,
+      python-dev, python-pytest, python3-dev, python3-pytest,
+      zlib1g-dev, libssl-dev, libx11-dev, libgl1-mesa-dev, libxrandr-dev,
       libxxf86dga-dev, libxcursor-dev, bison, flex, libfreetype6-dev,
-      libvorbis-dev, libjpeg-dev, libopenal-dev, libode-dev,
+      libvorbis-dev, libjpeg-dev, libopenal-dev, libeigen3-dev,
+      libavcodec-dev, libavformat-dev, libswscale-dev, libavresample-dev,
+      nvidia-cg-dev, libgles1-mesa-dev, libgles2-mesa-dev, libegl1-mesa-dev,
+      libharfbuzz-dev, libvorbis-dev, libopusfile-dev, libassimp-dev,
+      libbullet-dev, libode-dev,
     ]
 
 - name: Install packages (Fedora)
@@ -16,10 +21,13 @@
   dnf:
     update_cache: yes
     name: [
-      make, gcc, gcc-c++, clang, cmake, git, python-devel, zlib-devel,
+      make, gcc, gcc-c++, clang, cmake, git,
+      python-devel, python3-devel, python2-pytest, python3-pytest, zlib-devel,
       openssl-devel, libX11-devel, mesa-libGL-devel, libXrandr-devel,
       libXxf86dga-devel, libXcursor-devel, bison, flex, freetype-devel,
       libvorbis-devel, libjpeg-turbo-devel, openal-soft-devel, ode-devel,
+      eigen3-devel, assimp-devel, harfbuzz-devel, libvorbis-devel,
+      opusfile-devel, bullet-devel,
     ]
 
 - name: Install packages (Alpine)
@@ -28,8 +36,10 @@
   apk:
     update_cache: yes
     name: [
-      build-base, clang, cmake, git, python2-dev, python3-dev, zlib-dev,
-      openssl-dev, libx11-dev, mesa-dev, libxrandr-dev,
+      build-base, clang, cmake, git,
+      python2-dev, python3-dev, py2-pytest, py3-pytest,
+      zlib-dev, libressl-dev, libx11-dev, mesa-dev, libxrandr-dev,
       libxxf86dga-dev, libxcursor-dev, bison, flex, freetype-dev,
-      libvorbis-dev, libjpeg-turbo-dev, openal-soft-dev,
+      libvorbis-dev, libjpeg-turbo-dev, openal-soft-dev, eigen-dev, ffmpeg-dev,
+      harfbuzz-dev, libvorbis-dev, opusfile-dev,
     ]
